--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dayjs": "^1.10.7",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "moment": "^2.29.1",
     "socket.io": "^3.1.2"
   },
   "devDependencies": {
