--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index"
   },
   "keywords": [],
-  "author": "",
+  "author": "Deepak Kumar Singh",
   "license": "ISC",
   "dependencies": {
     "dayjs": "^1.10.7",
